[package]
name = "warnable"
version = "0.1.0"
edition = "2021"
author = "ZoopOTheGoop"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
log = ["dep:log"]
serde = ["dep:serde"]

[dependencies]
log = { version = "0.4.20", optional = true }
serde = { version = "1", optional = true, features = ["derive"] }

[dev-dependencies]
thiserror = "1.0.56"
log = "0.4.20"
